# platformer

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
src/combat/: combat.cpp
src/core/: api.hpp  game.cpp  types.hpp
src/fx/: fx.cpp
src/items/: items.cpp
src/net/: net.cpp
src/render/: render.cpp
src/ui/: menu_util.hpp  screen.hpp  ui.cpp
src/world/: worldgen.cpp
tests/: combat_test.cpp  determinism_test.cpp  e2e_net_test.cpp  fx_test.cpp  integration_test.cpp  items_test.cpp  mp_ui_test.cpp  net_test.cpp  platforms_test.cpp  render_smoke.cpp  ui_test.cpp  worldgen_test.cpp
